# N-Puzzle

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  TODO  custom_4x4  npuzzle  snail_20x20_1000  snail_20x20_100000  snail_7x7_500000
include/: npuzzle.h
lib/: Cargo.toml
lib/src/: algorithm.rs  checker.rs  generator.rs  goal_generator.rs  heuristic.rs  lib.rs  list_tmp.rs  parser.rs  puzzle_generator.rs  runner.rs  types.rs  utils.rs
map/: invalid_size  invalid_token  valid_3x3
puzzles/: invalid_number  invalid_range  invalid_size  invalid_token  valid_comments
puzzles/invalid/: invalid_columns  invalid_duplicate  invalid_rows  invalid_size  invalid_tile_number  invalid_tile_range
puzzles/solvable/: classic_1_3x3  custom_4  custom_4x4_2  custom_raph  snail_0_3x3  snail_100_3x3  snail_100_4x4  snail_10_3x3  snail_10x10_100000  snail_10x10_epic  snail_10x10_hard  snail_150_4x4  snail_1_3x3  snail_200_4x4  snail_2_3x3  snail_300_3x3  snail_300_4x4  snail_3x3_100  snail_3x3_200  snail_4x4_100  snail_4x4_150  snail_5000_7x7  snail_500_4x4  snail_500_7x7  snail_5x5_epic  snail_600_4x4  snail_7x7_epic  snail_8x8_epic  snail_90_4x4  snail_9x9_epic  snail_epic_10x10  snail_epic_4x4  snail_hard_10x10  snail_hard_3x3  snail_hard_4x4  snail_hard_5x5  snail_normal_4x4  snail_very_hard_4x4  snail_very_very_hard_4x4
puzzles/unsolvable/: snail_hard_10x10  snail_hard_5x5
scripts/: compare_algorithm.sh  compare_greedy.sh  compare_heuristic.sh  compare_uniform.sh
src/: algorithm.rs  astar.rs  astar_genetic.rs  astar_iterative.rs  astar_iterative_deepening.rs  astar_iterative_limited.rs  checker.rs  cli.yml  display.rs  error.c  file.c  generator.rs  heuristic.rs  lib.rs  main.c  main.rs  main_proto.rs  man.yml  node.rs  parse.c  parse_args.c  parse_file.c  parser.rs  solver.rs  test.rs
tests/: unsolvable_puzzles.rs
tests_old/: invalid_puzzles.rs  solvable_puzzles.rs
