[package]
name = "npuzzle"
version = "0.1.0"
authors = [
	"jafaghpo <jafaghpo@student.42.fr>",
	"ggregoir <ggregoir@student.42.fr>"
]
edition = "2018"


[lib]
name = "npuzzle_lib"
path = "lib/src/lib.rs"
test = true
harness = true


[dependencies]
rayon = "1.0"
clap = { version = "2.32.0", features = ["yaml"] }
rand = "0.6.5"
colored = "1.7"


[profile.dev]
# controls the `--opt-level` the compiler builds with.
# 0-1 is good for debugging. 2 is well-optimized. Max is 3.
# 's' attempts to reduce size, 'z' reduces size even more.
opt-level = 0

# (u32 or bool) Include debug information (debug symbols).
# Equivalent to `-C debuginfo=2` compiler flag.
debug = true

# controls whether compiler should set loader paths.
# If true, passes `-C rpath` flag to the compiler.
rpath = false

# Link Time Optimization usually reduces size of binaries
# and static libraries. Increases compilation time.
# If true, passes `-C lto` flag to the compiler, and if a
# string is specified like 'thin' then `-C lto=thin` will
# be passed.
lto = false

# controls whether debug assertions are enabled
# (e.g. debug_assert!() and arithmetic overflow checks)
debug-assertions = true 

# if > 1 enables parallel code generation which improves
# compile times, but prevents some optimizations.
# Passes `-C codegen-units`.
codegen-units = 16

# panic strategy (`-C panic=...`), can also be 'abort'
panic = 'unwind'

# whether or not incremental compilation is enabled
incremental = true

# use overflow checks for integer arithmetic.
# Passes the `-C overflow-checks=...` flag to the compiler.
overflow-checks = true 


[profile.release]
# The release profile, used for `cargo build --release` (and the dependencies
# for `cargo test --release`,  including the local library or binary).
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
panic = 'unwind'
incremental = false
overflow-checks = false


[profile.test]
# The testing profile, used for `cargo test` (for `cargo test --release` see
# the `release` and `bench` profiles).
opt-level = 0
debug = 2
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
incremental = true
overflow-checks = true